# MedievalSQL

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  SCHEMA.md  build.rs  docker-compose.yml  down.sh  er.excalidraw  mkdiagram-outside.sh  mkdiagram.sh  outside.sh  prepare-outside.bat  prepare-outside.sh  psql.sh  recreate-db.sh  recreate-outside.bat  recreate-outside.sh  shell.nix  up.sh  watch-outside.sh
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.sqlx/: query-00bf286ed1a0b85e8dd1cdd79d5eb900356f5454dafa97411d64bee540c8f16d.json  query-0d269baf872b729f1c3d968b13a12b1e4a08e8cd4e42802856f4ac27227f2491.json  query-0e93757e658fb158f13f47a3e3fe6587fff81563f212b8a8619a527a26157153.json  query-151b9683e80937cf93d10d7d37c4dbe62e8a01c29592dd83c184b36a21419c81.json  query-1a062f825588227c4d2eec5f325168ec8e1d9306c57622902ec03105c46a8f33.json  query-1ed43bb4d21fd77c9391defb1251e13514df8f026871961dbdc65ef6f57a218b.json  query-266976dd2cc379f3c20fa62952445a7f7a4578d403880cd8b85d64d3a5da683e.json  query-314d60c2bc4ed6f512ec42b1baea1865b52f0d62005e5e289a6112de8776b2c3.json  query-34eadafaaaa8ee3db92e0afec6e2fc9e689118d88c04a4e2c6338adda0347265.json  query-4829982f0d5a773463f0796c0844a0ac00ceb56bb71eab536ca75e5881d9779c.json  query-490ac6436c9a88973053bc91fd503d691dec95ffbd614d2f24bbb3ebfed360aa.json  query-4debaf0742ff9fc2d007f963a5c47123a73dd9950ccdd7a5d69d4ae5b8c8ce72.json  query-65c2c2fb82d657d677a822c36bdd41ac558dc745141a6600705fa0028ef176f7.json  query-80f6d53fff32b56185a4b9d099587805a1ec1be65758e6650007ec69fac8416d.json  (+9 more)
(+24 files in other folders)
