[package]
name = "medieval_sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
rocket = "=0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
sqlx = { version = "0.7.1", features = [
	"postgres",
	"runtime-tokio",
	"chrono",
	"uuid",
] }
totp-rs = { version = "5.2.0", features = ["rand", "qr", "gen_secret"] }
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4"] }
