[package]
name = "medieval_sql"
version = "0.1.0"
edition = "2021"
default-run = "medieval_sql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.27.0"
rand = "0.8.5"
rocket = "=0.5.0-rc.3"
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7.1", features = [
	"postgres",
	"runtime-tokio",
	"chrono",
	"uuid",
] }
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
totp-rs = { version = "5.2.0", features = ["rand", "qr", "gen_secret"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tui = "0.19.0"
uuid = { version = "1.4.1", features = ["v4"] }
